# organizeit2

./: .buildinfo  .copier-answers.yaml  .gitignore  Cargo.toml  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/conftest/: index.doctree
.doctrees/autoapi/organizeit2/: index.doctree
.doctrees/autoapi/organizeit2/cli/: index.doctree
.doctrees/autoapi/organizeit2/core/: index.doctree
.doctrees/autoapi/organizeit2/types/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/autoapi/test_backends/: index.doctree
.doctrees/autoapi/test_cli/: index.doctree
.doctrees/autoapi/test_cli_rm/: index.doctree
.doctrees/autoapi/test_core/: index.doctree
.doctrees/autoapi/test_regressions/: index.doctree
.doctrees/autoapi/test_types/: index.doctree
.doctrees/docs/src/: api.doctree  rust.doctree  usage.doctree
.doctrees/organizeit2/tests/directory/subdir1/: file1.doctree  file2.doctree
.doctrees/organizeit2/tests/directory/subdir1/subsubdir1/: file1.doctree  file2.doctree
.doctrees/organizeit2/tests/directory/subdir1/subsubdir2/: file1.doctree  file2.doctree
.doctrees/organizeit2/tests/directory/subdir2/: file1.doctree  file2.doctree
.doctrees/organizeit2/tests/directory/subdir2/subsubdir1/: file1.doctree  file2.doctree
.doctrees/organizeit2/tests/directory/subdir2/subsubdir2/: file1.doctree  file2.doctree
.doctrees/organizeit2/tests/directory/subdir3/: file1.doctree  file2.doctree
.doctrees/organizeit2/tests/directory/subdir4/: file1.doctree  file2.doctree
.doctrees/organizeit2/tests/directory2/: file1.doctree  file2.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
_modules/: index.html
_modules/organizeit2/: cli.html  core.html  types.html
_sources/: README.md.txt  index.md.txt
_sources/.github/ISSUE_TEMPLATE/: bug_report.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/conftest/: index.rst.txt
_sources/autoapi/organizeit2/: index.rst.txt
_sources/autoapi/organizeit2/cli/: index.rst.txt
_sources/autoapi/organizeit2/core/: index.rst.txt
_sources/autoapi/organizeit2/types/: index.rst.txt
_sources/autoapi/test_backends/: index.rst.txt
_sources/autoapi/test_cli/: index.rst.txt
_sources/autoapi/test_cli_rm/: index.rst.txt
_sources/autoapi/test_core/: index.rst.txt
_sources/autoapi/test_regressions/: index.rst.txt
_sources/autoapi/test_types/: index.rst.txt
_sources/docs/src/: rust.md.txt
autoapi/: index.html
autoapi/conftest/: index.html
autoapi/organizeit2/: index.html
autoapi/organizeit2/cli/: index.html
autoapi/organizeit2/core/: index.html
autoapi/organizeit2/types/: index.html
autoapi/test_all/: index.html
autoapi/test_backends/: index.html
autoapi/test_cli/: index.html
autoapi/test_cli_rm/: index.html
autoapi/test_core/: index.html
autoapi/test_regressions/: index.html
autoapi/test_types/: index.html
docs/src/: api.html  api.md  rust.html  rust.md  usage.html  usage.md
organizeit2/: __init__.py  cli.py  core.py  types.py
organizeit2/tests/: conftest.py  test_all.py  test_backends.py  test_cli.py  test_cli_rm.py  test_regressions.py  test_types.py
organizeit2/tests/directory/subdir1/: file1.html  file2.html
organizeit2/tests/directory/subdir1/subsubdir1/: file1.html  file2.html
organizeit2/tests/directory/subdir1/subsubdir2/: file1.html  file2.html
organizeit2/tests/directory/subdir2/: file1.html  file2.html
organizeit2/tests/directory/subdir2/subsubdir1/: file1.html  file2.html
organizeit2/tests/directory/subdir2/subsubdir2/: file1.html  file2.html
organizeit2/tests/directory/subdir3/: file1.html  file2.html
organizeit2/tests/directory/subdir4/: file1.html  file2.html
organizeit2/tests/directory2/: file1.html  file2.html
rust/: Cargo.toml
rust/python/: fsspec_adapter.rs  lib.rs
rust/python/directory/: mod.rs
rust/python/example/: mod.rs
rust/python/file/: mod.rs
rust/python/organizeit/: mod.rs
rust/src/: lib.rs
src/: lib.rs
