[package]
name = "organizeit2"
version = "0.1.0"
authors = ["the organizeit2 authors <t.paine154@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/1kbgz/organizeit2"
description = ""

[lib]
name = "organizeit2"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]

[profile.test.junit]
path = "junit.xml"

